# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  VoxelEngine.sln  build_log.txt  layout.txt
Backends/: Backends.vcxproj  Backends.vcxproj.filters  CMakeLists.txt
Backends/API/: renderer_api.cpp  renderer_api.hpp
Backends/OpenGL/Buffers/: opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp
Backends/OpenGL/Debug/: GLCall1.hpp  GLDebug.hpp  GLScope.hpp
Backends/OpenGL/Renderer/: opengl_renderer.cpp  opengl_renderer.hpp
Backends/OpenGL/Shader/: opengl_shader.cpp  opengl_shader.hpp
DebugTools/: CMakeLists.txt  DebugTools.vcxproj  DebugTools.vcxproj.filters  debug_tools.h
DebugTools/Core/Logger/: logger.cpp  logger.hpp
DebugTools/Core/Timer/: time_manager.cpp  time_manager.hpp  time_utils.cpp  time_utils.hpp  timer.cpp  timer.hpp
DebugTools/Draw/: debug_draw.cpp  debug_draw.hpp
DebugTools/Tools/: itool.hpp  tool_manager.cpp  tool_manager.hpp
DebugTools/Tools/ChunkTool/: chunk_tool.cpp  chunk_tool.hpp
DebugTools/Tools/ConsoleTool/: console_tool.cpp  console_tool.hpp
DebugTools/Tools/InputTool/: input_tool.cpp  input_tool.hpp
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  INFO.txt  nowy 16.txt
Engine/Assets/AssetManager/: asset_manager.cpp  asset_manager.hpp
Engine/Assets/AssetManager/Interfaces/: IAssetProvider.h
Engine/Assets/Shader/: ShaderTypeID.h
Engine/Assets/Shader/Lib/: shader_library.cpp  shader_library.hpp
Engine/Assets/Shader/Load/: shader_loader.cpp  shader_loader.hpp
Engine/Assets/Shader/ShaderManager/: shader_manager.cpp  shader_manager.hpp
Engine/Assets/Shader/ShaderManager/Core/: ShaderTypeID.h
Engine/Core/: application.cpp  application.hpp
Engine/Core/Application/: Application.cpp  Application.hpp  application.cpp  application.hpp
Engine/Core/Application/Additions/StartUpConfig/: start_up_config.hpp
Engine/Core/Application/AppInterface/: EngineCore.hpp  IAppInterface.hpp
Engine/Core/Application/EngineStartUp/: EngineStartup.cpp  EngineStartup.hpp  engine_startup.cpp  engine_startup.hpp
Engine/Core/Base/: Base.hpp
Engine/Core/Base/--PreCompileHeaders--/: pch.hpp
Engine/Core/Base/--PreCompileHeaders--/General/: EngineBaseHeaders.hpp  GeneralHeaders.hpp  Std.hpp
Engine/Core/Base/--PreCompileHeaders--/OS_specific/: MacHeaders.hpp
Engine/Core/Base/BaseTypes/: Types.hpp
Engine/Core/Base/Result/: Result.hpp  ResultCodes.hpp  ResultHandler.hpp  result.hpp
Engine/Core/Engine/DefaultEngineStartup/: engine_startup.cpp  engine_startup.hpp
Engine/Core/Engine/Manager/SystemManager/: EngineSystem.hpp  i_engine_system.hpp  system_manager.hpp
Engine/Core/Engine/Manager/Systems/Logger/: logger_system.cpp  logger_system.hpp
Engine/Core/Engine/Manager/Systems/Platform/: platform.cpp  platform.hpp  platform_system.cpp  platform_system.hpp
Engine/Core/Engine/Manager/Systems/Result/: result.hpp  result_OLD_DELETE_LATER.hpp  result_handler.cpp  (+1 more)
Engine/Core/Manager/: SystemManager.hpp
Engine/Core/Platform/: IWindow.hpp
Engine/Core/Platform/IWindow/: IWindow.cpp  IWindow.hpp
Engine/Core/Systems/: IEngineSystem.hpp  Systems.hpp
Engine/Core/Systems/Assets/: AssetProviderContext.hpp  AssetSystem.cpp  AssetSystem.hpp
Engine/Core/Systems/Assets/Shaders/: IShader.cpp  IShader.hpp  ShaderManager.cpp  ShaderManager.hpp
Engine/Core/Systems/File/: FileSystem.cpp  FileSystem.hpp
Engine/Core/Systems/Logger/: LoggerSystem.cpp  LoggerSystem.hpp
Engine/Core/Systems/Platform/: PlatformSystem.cpp  PlatformSystem.hpp
Engine/Core/Systems/Renderer/: RendererSystem.cpp  RendererSystem.hpp
Engine/Core/Systems/Time/: TimeSystem.cpp  TimeSystem.hpp
Engine/Core/Systems/Window/: WindowSystem.cpp  WindowSystem.hpp
Engine/Core/Systems/Window/IWindow/: IWindow.cpp  IWindow.hpp
Engine/Platform/GLFW/: windowGLFW.cpp  windowGLFW.hpp
Engine/Platform/Input/: action.hpp  input.cpp  input.hpp  input_mode.hpp  key_code.hpp
Engine/Platform/Input/Debug/: debug_input.cpp  debug_input.hpp
Engine/Platform/Input/TextInput/: text_input.cpp  text_input.hpp
Engine/Platform/Platform/: platform.cpp  platform.hpp
Engine/Platform/WindowCreation/: window.cpp  window.hpp
Engine/Renderer/Buffers/: buffer_layout.hpp  index_buffer.cpp  index_buffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
Engine/Renderer/Texture/: texture.cpp
Engine/RenderingAPI/Buffers/: buffer_layout.hpp  index_buffer.cpp  index_buffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
Engine/RenderingAPI/Renderer/: renderer.cpp  renderer.hpp
Engine/RenderingAPI/Shader/: game_shader.cpp  game_shader.hpp
Engine/RenderingAPI/Texture/: texture.cpp  texture.hpp
Engine/Res/shaders/: basic.shader
Engine/Src/: main.cpp  main_old.cpp
Engine/Systems/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.hpp  WindowGLFW.cpp  WindowGLFW.hpp
Engine/Tests/Objects/Console/: console.cpp  console.hpp
Engine/Tests/Objects/Rotating Cube/: rcube.cpp  rcube.hpp
Engine/Tests/Objects/Triangle/: triangle.cpp  triangle.hpp
Engine/ZZZZZZZ_GARBAGE_TEMP_FILES/CHANGE/: shader_library111.cpp  shader_library111.hpp  shader_type111.cpp  shader_type111.hpp
Engine/ZZZZZZZ_GARBAGE_TEMP_FILES/Vulkan for later DO NOT TOUCH FOR NOW/: Source.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp
VoxelGame/: CMakeLists.txt  VoxelGame.vcxproj  main.cpp
VoxelGame/src/: topology kinda  example
VoxelGame/src/Core/: camera.cpp  camera.hpp
VoxelGame/src/Core/Application/: EntryPoint.cpp  VoxelGameApp.cpp  VoxelGameApp.hpp  entry_point.cpp  voxel_game_app.cpp  voxel_game_app.hpp
VoxelGame/src/Input/: InputManager.cpp  InputManager.hpp
VoxelGame/src/Input/Devices/Controller/: controller.cpp  controller.hpp
VoxelGame/src/Input/Devices/Keyboard/: keyboard.cpp  keyboard.hpp
VoxelGame/src/Input/Devices/Mouse/: mouse.cpp  mouse.hpp
(+629 files in other folders)
